fix: halo size & keywords wrap

--- a/okp4-gatsby/src/assets/styles/pages/explore/_dataverseGateways.scss
+++ b/okp4-gatsby/src/assets/styles/pages/explore/_dataverseGateways.scss
@@ -18,7 +18,7 @@ main.dataverseGateways {
       text-align: center;
 
       @include media-bp-down(lg) {
-        padding-top: 130px;
+        padding: 130px 0 0;
       }
 
       .introduction {
@@ -67,8 +67,8 @@ main.dataverseGateways {
           opacity: 0.1;
 
           @include media-bp-down(lg) {
-            width: 30%;
-            left: 35%;
+            width: 66%;
+            left: 16%;
             height: 100%;
           }
         }
@@ -80,7 +80,7 @@ main.dataverseGateways {
           @include media-bp-down(lg) {
             flex-direction: column;
             align-items: center;
-            gap: 16px;
+            gap: 30px;
           }
 
           @media screen and (max-width: 420px) {
@@ -92,6 +92,10 @@ main.dataverseGateways {
             font-weight: 700;
             line-height: 150%;
             margin: 0 25px;
+
+            @media screen and (max-width: 470px) {
+              margin: 0;
+            }
 
             &.share {
               color: #006796;
